ItemListController - add new article API; added some const to JshoHttpException, ApiAuthenticator; edit assert messages at entities
